@@ -106,6 +106,7 @@ KAction *Krusader::actProperties = 0;
 KAction *Krusader::actPack = 0;
 KAction *Krusader::actUnpack = 0;
 KAction *Krusader::actTest = 0;
+KAction *Krusader::actCopy = 0;
 KAction *Krusader::actCompare = 0;
 KAction *Krusader::actCalculate = 0;
 KAction *Krusader::actCreateChecksum = 0;
@@ -539,7 +540,7 @@ void Krusader::setupActions() {
    KStdAction::keyBindings( SLOTS, SLOT( configKeys() ), actionCollection(), "std_config_keys" );
 
    KStdAction::cut( SLOTS, SLOT( cut() ), actionCollection(), "std_cut" )->setText( i18n("Cut to Clipboard") );
-   KStdAction::copy( SLOTS, SLOT( copy() ), actionCollection(), "std_copy" )->setText( i18n("Copy to Clipboard") );
+   (actCopy = KStdAction::copy( SLOTS, SLOT( copy() ), actionCollection(), "std_copy" ))->setText( i18n("Copy to Clipboard") );
    KStdAction::paste( SLOTS, SLOT( paste() ), actionCollection(), "std_paste" )->setText( i18n("Paste from Clipboard") );
 
    // the toggle actions
