@@ -1,3 +1,4 @@
+    ADDED: Searcher-results: dragging items, copy to clipboard (CTRL+C)
     ADDED: Support for useraction placeholders in Krusader's commandline
            patches by Jiri Palacek and Vaclav Juza, thanks a lot!
     ADDED: New default user action "Backup current"
